# jayunits

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  measure.rs  num.rs  unit.rs  unit_constants.rs  units.rs
src/builder/: measure.rs  mod.rs  unit.rs
src/constants/: mod.rs  units.rs
src/geom/angle/: angle_measure.rs  angle_unit.rs
src/geom/distance/: distance_measure.rs  distance_unit.rs
src/internal/: measure.rs  mod.rs  unit.rs
src/motion/: mod.rs  motion_unit.rs
src/motion/acceleration/: mod.rs
src/motion/acceleration/angular/: angular_acceleration_measure.rs  angular_acceleration_unit.rs  mod.rs
src/motion/acceleration/linear/: linear_acceleration_measure.rs  linear_acceleration_unit.rs  mod.rs
src/motion/velocity/: mod.rs
src/motion/velocity/angular/: angular_velocity_measure.rs  angular_velocity_unit.rs
src/motion/velocity/linear/: linear_velocity_measure.rs  linear_velocity_unit.rs
src/time/: time_measure.rs  time_unit.rs
tests/: acceleration.rs  geom.rs  time.rs  velocity.rs
